updating file again

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "title": "TerraMA²",
-  "name": "startbootstrap-modern-business",
+  "name": "site-terrama2",
   "version": "1.0.0-beta",
   "description": "A multipurpose HTML website template built with Bootstrap",
   "keywords": [
