--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "devDependencies": {
     "browser-sync": "2.18.13",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0"
   }
 }
